quick-assign-2/bison/bluster.output
Grammar

    0 $accept: prog $end

    1 prog: exp
    2     | prog exp

    3 exp: EXIT
    4    | ADD USER EOL
    5    | BLAST message EOL
    6    | SEND USER message EOL

    7 message: WORD
    8        | message WORD


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 7 8
USER (259) 4 6
EOL (260) 4 5 6
EXIT (261) 3
ADD (262) 4
BLAST (263) 5
SEND (264) 6


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
prog (11)
    on left: 1 2, on right: 0 2
exp (12)
    on left: 3 4 5 6, on right: 1 2
message (13)
    on left: 7 8, on right: 5 6 8


state 0

    0 $accept: . prog $end

    EXIT   shift, and go to state 1
    ADD    shift, and go to state 2
    BLAST  shift, and go to state 3
    SEND   shift, and go to state 4

    prog  go to state 5
    exp   go to state 6


state 1

    3 exp: EXIT .

    $default  reduce using rule 3 (exp)


state 2

    4 exp: ADD . USER EOL

    USER  shift, and go to state 7


state 3

    5 exp: BLAST . message EOL

    WORD  shift, and go to state 8

    message  go to state 9


state 4

    6 exp: SEND . USER message EOL

    USER  shift, and go to state 10


state 5

    0 $accept: prog . $end
    2 prog: prog . exp

    $end   shift, and go to state 11
    EXIT   shift, and go to state 1
    ADD    shift, and go to state 2
    BLAST  shift, and go to state 3
    SEND   shift, and go to state 4

    exp  go to state 12


state 6

    1 prog: exp .

    $default  reduce using rule 1 (prog)


state 7

    4 exp: ADD USER . EOL

    EOL  shift, and go to state 13


state 8

    7 message: WORD .

    $default  reduce using rule 7 (message)


state 9

    5 exp: BLAST message . EOL
    8 message: message . WORD

    WORD  shift, and go to state 14
    EOL   shift, and go to state 15


state 10

    6 exp: SEND USER . message EOL

    WORD  shift, and go to state 8

    message  go to state 16


state 11

    0 $accept: prog $end .

    $default  accept


state 12

    2 prog: prog exp .

    $default  reduce using rule 2 (prog)


state 13

    4 exp: ADD USER EOL .

    $default  reduce using rule 4 (exp)


state 14

    8 message: message WORD .

    $default  reduce using rule 8 (message)


state 15

    5 exp: BLAST message EOL .

    $default  reduce using rule 5 (exp)


state 16

    6 exp: SEND USER message . EOL
    8 message: message . WORD

    WORD  shift, and go to state 14
    EOL   shift, and go to state 17


state 17

    6 exp: SEND USER message EOL .

    $default  reduce using rule 6 (exp)
